--- a/Noon_E-Com_English.strings
+++ b/Noon_E-Com_English.strings
@@ -217,7 +217,7 @@ Fuzzy*/
 "checkout_order_summary_shipping_price_unknown" = "Unknown";
 "checkout_order_summary_selected_address_title" = "Ship to";
 "checkout_order_summary_selected_payment_title" = "Payment";
-"checkout_order_summary_selected_wallet_f1" = "My Wallet %d";
+"checkout_order_summary_selected_wallet_f1" = "My Wallet %s";
 "checkout_order_summary_shipment_title_f1" = "Shipment %d";
 "checkout_order_summary_review_title" = "Review";
 "checkout_order_summary_review_subtitle" = "Please scroll down to place your order";
@@ -546,9 +546,9 @@ Fuzzy*/
 "login_signup_forgot_password_next_attempt_two" = "Next attempt in %d minutes";
 "login_signup_forgot_password_next_attempt_less_than_10" = "Next attempt in %d minutes";
 "login_signup_forgot_password_next_attempt_greater_than_10" = "Next attempt in %d minutes";
-"home_order_tracking_status_title" = "الوضع الحالي للطلب";
-"home_order_tracking_shipment_title" = "المنتجات ضمن الطلب";
-"home_order_tracking_view_all" = "الاطلاع على جميع الطلبات";
+"home_order_tracking_status_title" = "Shipment status update";
+"home_order_tracking_shipment_title" = "Shipment items";
+"home_order_tracking_view_all" = "View all orders >";
 "product_details_missing_select_parameter_error_message" = "Please select a %s to continue";
 "login_signup_forgot_password_account_changed_title" = "هل تغير بريدك الإلكتروني أو رقم هاتفك المتحرك؟";
 "login_signup_forgot_password_account_changed_subtitle" = "إن كنت لم تعد تستخدم البريد الإلكتروني أو رقم الهاتف المسجلين في حسابك الخاص في نون، تواصل مع فريق خدمة العملاء ليساعدك أحدهم على الدخول إلى حسابك.";
@@ -599,3 +599,45 @@ Fuzzy*/
 "login_signup_error_password_length" = "Password must be at least 6 characters";
 "login_signup_error_enter_name" = "Enter your name";
 "login_signup_otp_invalid_code" = "OTP Code is invalid";
+
+/*MARK: Category*/
+"category_screen_no_item_label" = "We're having trouble displaying this categories, please try later.";
+"category_screen_subcategories_list_title" = "Categories";
+
+/*MARK: Product List*/
+"product_list_no_item_label" = "We're having trouble displaying products for this category, please try later.";
+"product_list_no_recently_viewed_itemsm" = "You dont have any recently viewed item";
+"product_list_no_recommended_items" = "You dont have any recommended products";
+
+/*MARK: Common Error*/
+"common_error_request_5xx_title" = "Something went wrong";
+"common_error_request_5xx_message" = "Please try after some time";
+"common_error_request_4xx_title" = "Something went wrong.";
+"common_error_request_4xx_message" = "Please try after some time.";
+"common_error_empty_textfield" = "Cannot be empty";
+"common_error_empty_password" = "Must be at least 6 characters long";
+"common_error_invalid_email_address" = "Email address must be valid";
+"common_error_too_long_username" = "Name is too long";
+"common_error_invalid_phone_number" = "Phone number must be valid";
+"common_error_invalid_number" = "Number must be valid";
+
+/*MARK: Wallet*/
+"wallet_credit_card_cell_type_default_label" = "Default";
+"wallet_credit_card_cell_make_default_label" = "Make default";
+"wallet_credit_card_cell_expiry_label" = "Expires:";
+"wallet_credit_card_cell_edit_button" = "Edit";
+"wallet_credit_card_cell_delete_button" = "Delete";
+"wallet_credit_transaction_cell_type_cash_label" = "Wallet";
+
+/*MARK: Settings*/
+"settings_screen_title_legal_label" = "Legal";
+"settings_screen_privacy_policy_label" = "Privacy policy";
+"settings_screen_terms_of_use_label" = "Terms of use";
+"settings_screen_terms_of_sale_label" = "Terms of sale";
+
+/*MARK: Permission:*/
+"permission_location_message" = "noon requires location access to improve your delivery experiance. Please grant access in settings";
+"permission_location_title" = "Location Required";
+"search_bar_placeholder_what_looking_for_label" = "What are you looking for today?";
+"search_bar_placeholder_search_in_category_f1" = "Search in %s";
+"common_copyright" = "Copyright (c) 2017 noon.";
