Update Noon_E-Com_Arabic.strings (POEditor.com)

--- a/Noon_E-Com_Arabic.strings
+++ b/Noon_E-Com_Arabic.strings
@@ -573,3 +573,4 @@ Fuzzy*/
 "search_bar_placeholder_what_looking_for_label" = "";
 "search_bar_placeholder_search_in_category_f1" = "";
 "common_copyright" = "";
+"returns_screen_selected_pickup_time_between" = "";
